objects/Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Class_Trigger_Name__c</fullName>
        <description>To place Class/Trigger name where exception happened</description>
        <label>Class/Trigger Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Error_Description__c</fullName>
        <description>to store error/exception description</description>
        <label>Exception/Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Name__c</fullName>
        <description>Pinpoint the integration if an exception is coming from the integration</description>
        <label>Integration Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TransactionItem Integration</fullName>
                </value>
                <value>
                    <fullName>Transaction Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object name if any for an exception</description>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <description>To store the request body for a callout/inbound integration</description>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>To store the response for a callout/inbound integration</description>
        <label>Response</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Logged in user when an exception occurred</description>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Level of Severity of exception/error</description>
        <label>Severity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Location of the exception/error</description>
        <label>Stack Trace</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error Log</label>
    <nameField>
        <displayFormat>ErrLog-{0000000}</displayFormat>
        <label>ErrLog</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>